works: fix svg size on ios

--- a/src/works/style.css
+++ b/src/works/style.css
@@ -154,6 +154,7 @@
   appearance: none;
   cursor: pointer;
   pointer-events: all;
+  position: relative;
 }
 
 #works #index .work .audio button > * {
@@ -163,6 +164,10 @@
 #works #index .work .audio button svg {
   width: 100%;
   height: 100%;
+  position: absolute;
+  padding: 7px;
+  top: 0;
+  left: 0;
 }
 
 @media only screen and (min-width: 768px) {
